--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 <html>
     <head>
         <style>
-            p {color: blue;}
+            p {color: blue;
+                font-size: 48px;
+                text-align: center;
+                font-family: arial, helvetica, sans-serif;
+            }
         </style>
     </head>
     <body>
