--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
                 font-weight: bold;
                 text-decoration: underline;
                 text-align: center;
-                border-color: green;
-                border-width: 2px;
-                border-style: dashed;
+              
             }
         </style>
     </head>
     <body>
         <p> All You Need for Volleyball </p>
+        
+        <h3> We have volleyball nets, volleyball balls, knee pads, and volleyball clothes. 25 percent of our money earned goes to a charity for sick kids in Africa.</h3>
         </body>
     </html>
 
