--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
                 font-weight: bold;
                 text-decoration: underline;
                 text-align: center;
+              }
               
+            img { display: block;
+            margin-right: auto;
+                
             }
         </style>
     </head>
