--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                  font-size: 25px;
                 }
             
-            body {background: url
-            (https://s-media-cache-ak0.pinimg.com/736x/18/2e/45/182e456b0d834fe92c9e4dd3f05a62df.jpg);
+            body {background: url(https://s-media-cache-ak0.pinimg.com/736x/18/2e/45/182e456b0d834fe92c9e4dd3f05a62df.jpg);
             color: white;
             }
         </style>
