--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h2> We have volleyball nets, volleyball balls, knee pads, and volleyball clothes. 25 percent of our money earned goes to a charity for sick kids in Africa.</h2>
         <img style= "width: 25%" src="http://www.ennis.k12.tx.us/images/Schools/EJHS/content/volleyball_clipart.png" />
         </body>
+        <img style= "width: 25%" src="http://www.ennis.k12.tx.us/images/Schools/EJHS/content/volleyball_clipart.png" />
     </html>
     
 
