--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
                 }
             
             body {
-                background: url 
-            (https://s-media-cache-ak0.pinimg.com/736x/18/2e/45/182e456b0d834fe92c9e4dd3f05a62df.jpg);
+                background: url (https://s-media-cache-ak0.pinimg.com/736x/18/2e/45/182e456b0d834fe92c9e4dd3f05a62df.jpg);
             color: white;
             }
         </style>
