--- a/volleyball.html
+++ b/volleyball.html
@@ -6,7 +6,7 @@
                 font-weight: bold;
                 text-decoration: underline;
                 text-align: center;
-                border: 10px inset purple;
+                border: 10px hidden purple;
                 
               }
               
