--- a/volleyball.html
+++ b/volleyball.html
@@ -21,7 +21,7 @@
             
             p.v-ball{color: #43BFC7;
             background-color: white;
-            border: 20px double groove #43BFC7;
+            border: 20px double #43BFC7;
             text-align: center;
             }
             
