--- a/volleyball.html
+++ b/volleyball.html
@@ -42,6 +42,7 @@
             <li> Volleyballs </li>
             <li> Volleyball nets</li>
             <li> Knee pads</li>
+            <li> Volleyball shorts</li>
             <li> Volleyball shoes</li>
             <li> And of course jerseys from your favorite team as well as your favorite player's jersey</li>
         </ul>
