--- a/volleyball.html
+++ b/volleyball.html
@@ -28,7 +28,7 @@
             
             p.fun{color: #B041FF;
             background-color: #FFFFCC;
-            border: 20px double #43BFC7;
+            border: 20px double #B041FF;
             text-align: center;    
             }
             
