--- a/volleyball.html
+++ b/volleyball.html
@@ -29,7 +29,8 @@
             p.fun{color: #B041FF;
             background-color: #FFFFCC;
             border: 20px double #B041FF;
-            text-align: center;    
+            text-align: center; 
+            font-size: 50px 
             }
             
             body {
