--- a/volleyball.html
+++ b/volleyball.html
@@ -26,9 +26,9 @@
             text-align: center;
             }
             
-            p.fun{color: #B041FF;
+            p.fun{color: #FFDB58;
             background-color: #FFFFCC;
-            border: 20px double #B041FF;
+            border: 20px double #FFDB58;
             text-align: center; 
             font-size: 50px 
             }
