--- a/volleyball.html
+++ b/volleyball.html
@@ -26,9 +26,9 @@
             text-align: center;
             }
             
-            p.fun{color: #FFDB58;
-            background-color: #FFFFCC;
-            border: 20px double #FFDB58;
+            p.fun{color: #8D38C9;
+            background-color: #FFDB58;
+            border: 20px double #8D38C9;
             text-align: center; 
             font-size: 50px 
             }
