--- a/volleyball.html
+++ b/volleyball.html
@@ -27,7 +27,7 @@
             }
             
             p.fun{color: #8D38C9;
-            background-color: #FFDB58;
+            background-color: #FFF8C6;
             border: 20px double #8D38C9;
             text-align: center; 
             font-size: 50px 
